Schedular file update for FC_Enabled entitlement